# jarvis-voice-shell

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  Start-JARVIS-Hermes-Always-On.bat  Start-JARVIS-Hermes-PTT.bat  Start-JARVIS-OpenAI-Voice.bat  Start-JARVIS.bat  __init__.py  after-install.md  jarvis_voice_client.py  plugin.yaml  pyproject.toml  requirements-whisper.txt  run-client-on-dot2.sh  run.sh  start-all.sh
client-pkg/: pyproject.toml
client-pkg/hermes_voice_client/: __init__.py
docs/plans/: 2026-05-30-hermes-ptt-bargein.md
hermes_voice/: gateway.py  persona.py  skills_registry.py
hermes_voice/static/: index.html
scripts/: public_safety_scan.py
src/jarvis_voice_shell/: __init__.py  audio_devices.py  bridge.py  cli.py  config.py  controller.py  latency.py  local_voice.py  openai_voice.py  ptt.py  recorder.py  speech_queue.py  stt.py  tts.py  vad.py  voice_profile.py
systemd/: jarvis-voice-client.service
tests/: test_audio_devices.py  test_bridge.py  test_cli.py  test_config.py  test_controller.py  test_latency.py  test_openai_voice.py  test_ptt.py  test_recorder.py  test_speech_queue.py  test_stt.py  test_tts.py  test_vad.py  test_voice_profile.py
web/: jarvis_web.py
