[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-voice-shell"
version = "0.1.0"
description = "Realtime push-to-talk voice shell for Hermes AI Agent — JARVIS edition"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "JARVIS Voice Shell contributors"}]
keywords = ["voice", "tts", "stt", "hermes", "jarvis", "realtime"]

dependencies = [
    "edge-tts>=6.1.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0",
    "pathlib>=1.0.1; python_version < '3.12'",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "click>=8.0",
    "keyboard>=0.13.5",
    "numpy>=2.0",
    "scipy>=1.13",
    "websockets>=12.0",
]

[project.optional-dependencies]
audio = [
    "pyaudio>=0.2.14",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

stt = [
    "faster-whisper>=1.0",
]

[project.scripts]
jarvis-voice = "jarvis_voice_shell.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
