[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-voice-client"
version = "0.1.3"
description = "Standalone Python voice client for the hermes-voice gateway — captures mic, plays TTS, talks over WebSocket"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "hermes-voice contributors"}]
keywords = ["voice", "client", "webrtc", "hermes", "realtime", "tts", "stt"]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=2.0",
    "websockets>=12.0",
    "miniaudio>=1.51",
]

[project.scripts]
hermes-voice-client = "hermes_voice_client:main"

[project.urls]
Homepage = "https://github.com/Ex8-ca/hermes-voice"
Source = "https://github.com/Ex8-ca/hermes-voice/tree/main/client-pkg"
Issues = "https://github.com/Ex8-ca/hermes-voice/issues"

[tool.setuptools]
packages = ["hermes_voice_client"]

[tool.setuptools.package-data]
hermes_voice_client = ["py.typed"]
